# capstone

./: README.md
backend/: .env  pyproject.toml
backend/app/: __init__.py  routes.py
backend/app/models/: category.py  package.py  vote.py
backend/data/: Categories.csv  Packages 3.numbers  load_data.py  packages.csv
backend/migrations/versions/: 442e3837c938_new_database.py  66c559d6598a_temp_fix.py  733ead2a88ec_adds_category_and_package_models.py  d121273258b9_temp_fix_undo.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  Router.js  index.js
frontend/src/components/: Category.js  CategoryList.js  LeadershipBoard.js  Package.js  PackageList.js  SearchForm.js
frontend/src/pages/: 404.js  About.js  Home.js  Leaderboard.js  SearchPackage.js
